[Mac] -[WebPDFView _menuItemsFromPDFKitForEvent:] leaks NSMenuItems https://bugs.webkit.org/show_bug.cgi?id=89434

Reviewed by Darin Adler.

* WebView/WebPDFView.mm:
(-[WebPDFView _menuItemsFromPDFKitForEvent:]): Release copied
NSMenuItems once they're stored in copiedItems.

git-svn-id: svn://svn.chromium.org/blink/trunk@120726 bbb929c8-8fbe-4397-9dbb-9b2b20218538